--- a/ejercitacion/src/App.css
+++ b/ejercitacion/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  display: grid;
+grid-template-columns: 33% 33% 33%;
+gap: 50px;
+Flex-direction: row;
+  
 }
 
 .App-logo {
@@ -12,9 +17,8 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
-  background-color: #282c34;
+  background-color: #ea4b11;                                                                                                                          
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,7 +26,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+ 
+  
 }
+
 
 .App-link {
   color: #61dafb;
